k8s/server/kateyes-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: kateyes-server-deployment
    component: server
  name: kateyes-server-deployment
  namespace: kateyes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kateyes-server-deployment
  strategy: {}
  template:
    metadata:
      labels:
        app: kateyes-server-deployment
    spec:
      serviceAccount: kateyes-sa
      containers:
      - image: vikramnagarkar/kateyes-server:v0.0.1-beta-004
        name: kateyes-server
        ports:
        - containerPort: 5000
