k8s/server/kateyes-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: kateyes-server-deployment
    component: server
  name: kateyes-server-svc
  namespace: kateyes
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: kateyes-server-deployment
    #  type: LoadBalancer
status:
  loadBalancer: {}
